--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kahoot.js-updated",
+  "name": "kahoot.js-working",
   "version": "2.4.0",
   "description": "Answer, Join Kahoot Quizzes with nodejs",
   "main": "index.js",
